* Manage custom login process
* Add erase on Many2One
* Re-position icons on Many2One widget

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Timedelta uses 30 days for month
* Manage context model of ir.action.act_window
* Add Note

Version 3.8.0 - 2015-11-02
* Initial release