@@ -1,3 +1,4 @@
+* Add support for count on Action Window Domains
 * Manage custom login process
 * Add erase on Many2One
 * Re-position icons on Many2One widget
